# ChangeLog for app-shells/bash
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.114 2006/09/26 04:52:58 tsunam Exp $

  26 Sep 2006; Joshua Jackson <tsunam@gentoo.org> bash-3.1_p17.ebuild:
  Stable x86; bug #149047

  25 Sep 2006; Fabian Groffen <grobian@gentoo.org> bash-3.1_p17.ebuild:
  Marked ppc-macos stable for progressive users (bug #149047)

  25 Sep 2006; Markus Rothe <corsair@gentoo.org> bash-3.1_p17.ebuild:
  Stable on ppc64; bug #149047

  17 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> bash-3.1_p17.ebuild:
  ppc stable

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org> bash-3.1_p17.ebuild:
  Mark 3.1_p17 stable on ia64

  19 Aug 2006; Fabian Groffen <grobian@gentoo.org> bash-3.1_p16.ebuild:
  Marked ppc-macos stable for progressive users (bug #129885)

  01 Aug 2006; Diego Pettenò <flameeyes@gentoo.org> files/dot-bashrc,
  bash-3.1_p17.ebuild:
  Don't make the ls alias when not using GNU userland, or it will break;
  export CLICOLOR for Gentoo/FreeBSD compatibility.

  20 Jul 2006; Mike Frysinger <vapier@gentoo.org> files/bashrc:
  Enable histappend option by default #139609 by Trenton D. Adams and add
  small rewrite by Michael A. Smith to use bash builtins instead of grep for
  detecting term color capabilities #140266.

  20 Jul 2006; Mike Frysinger <vapier@gentoo.org> files/dot-bashrc:
  Only run dircolors on /etc/DIR_COLORS if /etc/DIR_COLORS exists #140628.

  16 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  files/bash-3.0-bash-logger.patch, files/bash-3.1-bash-logger.patch:
  Fix by Victor Nawothnig so logger syslog() is called correctly when cmdline
  is over 600 bytes #139043.

  06 May 2006; Mike Frysinger <vapier@gentoo.org>
  +files/bash-3.1-dev-fd-test-as-user.patch, bash-3.1_p16.ebuild,
  bash-3.1_p17.ebuild:
  Fix /dev/fd test with FEATURES=userpriv #131875 by Heinrich Nirschl.

  28 Apr 2006; Joshua Kinard <kumba@gentoo.org> bash-3.1_p16.ebuild: