@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/Attic/ncurses-5.5-r3.ebuild,v 1.6 2006/09/26 04:44:34 tsunam Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/Attic/ncurses-5.5-r3.ebuild,v 1.7 2006/09/26 11:38:17 blubb Exp $
 
 inherit eutils flag-o-matic toolchain-funcs
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://gnu/ncurses/${MY_P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="5"
-KEYWORDS="~alpha ~amd64 arm ~hppa ia64 m68k ~mips ppc ppc64 s390 sh ~sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha amd64 arm ~hppa ia64 m68k ~mips ppc ppc64 s390 sh ~sparc x86 ~x86-fbsd"
 IUSE="bootstrap build debug doc gpm minimal nocxx trace unicode"
 
 DEPEND="gpm? ( sys-libs/gpm )"
