@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ncurses
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.122 2006/09/26 04:44:34 tsunam Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.123 2006/09/26 11:38:17 blubb Exp $
+
+  26 Sep 2006; Simon Stelling <blubb@gentoo.org> ncurses-5.5-r3.ebuild:
+  stable on amd64
 
   26 Sep 2006; Joshua Jackson <tsunam@gentoo.org> ncurses-5.5-r3.ebuild:
   Stable x86; bug #149048
