@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/bash
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.114 2006/09/26 04:52:58 tsunam Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.115 2006/09/26 11:34:51 blubb Exp $
+
+  26 Sep 2006; Simon Stelling <blubb@gentoo.org> bash-3.1_p17.ebuild:
+  stable on amd64
 
   26 Sep 2006; Joshua Jackson <tsunam@gentoo.org> bash-3.1_p17.ebuild:
   Stable x86; bug #149047
